<resources>
    <string name="app_name">ChatApp</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_account_create_account">Don\'t have account? create account.</string>
    <string name="signup">SignUp</string>
    <string name="user_name">User name</string>
    <string name="zakir">zakir</string>
    <string name="log_out">Log out</string>
    <string name="add_user">Add User</string>
    <string name="type_message_here">Type message here</string>
    <string name="this_is_sent_message">This is sent message</string>
    <string name="this_is_receive_message">This is receive message</string>
    <string name="name">Name</string>
</resources>