<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_watermark"
    tools:context=".SignUpActivity">

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/signup"
      android:textColor="@color/textColor"
      android:textSize="50sp"
      android:layout_marginTop="100dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/etSignUpUserName"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginTop="50dp"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:autofillHints="emailAddress"
      android:background="@drawable/edit_text_shape"
      android:hint="@string/user_name"
      android:inputType="text"
      android:padding="5dp"
      android:textColorHint="@color/textColor"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <EditText
      android:id="@+id/etSignUpEmail"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginTop="10dp"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:autofillHints="emailAddress"
      android:background="@drawable/edit_text_shape"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:padding="5dp"
      android:textColorHint="@color/textColor"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etSignUpUserName" />

  <EditText
      android:id="@+id/etSignUpPassword"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:autofillHints="password"
      android:layout_marginTop="10dp"
      android:background="@drawable/edit_text_shape"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:padding="5dp"
      android:textColorHint="@color/textColor"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etSignUpEmail" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btnSignUp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="10dp"
      android:background="@drawable/button_back"
      android:text="@string/signup"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etSignUpPassword" />

  </androidx.constraintlayout.widget.ConstraintLayout>